<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Enregistrement">

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/entrez_votre_nom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/entrez_votre_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/editTextMotDePasse"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/entrez_votre_mot_de_passe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMail"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/editTextTelephone"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/entrez_votre_telephone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMotDePasse"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/enregistrementButton"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:text="@string/s_enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelephone" />

</androidx.constraintlayout.widget.ConstraintLayout>